# open8

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CNAME  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: api-tests.yml  bsd.yml  dos.yml  dreamcast.yml  emscripten.yml  haikuos.yml  ios.yml  linux.yml  n-gage.yml  n3ds.yml  ngage.yml  nokia-ngage.yml  ps2.yml  psp.yml  psvita.yml  riscos.yml  windows.yml
cmake/: djgpp-platform-overrides.cmake  djgpp.cmake  get_SDL3.cmake  i586-pc-msdosdjgpp.cmake  project_config.cmake
export/: .gitignore  index.html  style.css
export/carts/: .gitignore  api_test.p8
lib/armi/urel/: README.md  z8lua.lib
media/: logo.pmf
res/: !Boot,feb  !Run,feb  !Sprites,ff9  Pico-8.aifspec  Pico-8.mbm  Pico-8.pkg  Pico-8.rss  open8.aifspec  open8.pkg  open8.rss
src/: api.c  api.h  api_ngage.cpp  app.c  app.h  atan2_table.h  auxiliary.c  auxiliary.h  cartridge_loader.c  cartridge_loader.h  config.h  core.c  core.h  emulator.c  emulator.h  image_loader.c  image_loader.h  main.c  memory.c  memory.h  ngage.cpp  ngage_application.cpp  ngage_application.h  ngage_appui.cpp  ngage_appui.h  ngage_appview.cpp  ngage_appview.h  ngage_document.cpp  ngage_document.h  p8scii.c  p8scii.h  pico_defs.h  sin_table.h
src/lexaloffle/: p8_compress.c  p8_compress.h  pxa_compress_snippets.c
src/lua/: .gitignore  CMakeLists.txt  linit.c  lmathlib.c
src/luajit/: .gitignore  CMakeLists.txt  CMakeSettings.json  LuaJIT.cmake
src/luajit/host/minilua/: CMakeLists.txt
src/luajit/src/: fix32.h  lib_init.c  lj_ctype.c  lj_ir.c  lj_ircall.h  lj_lib.h  lj_obj.h  lj_opt_fold.c  lj_parse.c  lj_strfmt_num.c  lj_strscan.c  lj_tab.c  lj_vm.h  lj_vmmath.c  luaconf.h  luajit_rolling.h
src/ngage/: api.cpp  ngage.cpp  ngage_application.cpp  ngage_application.h  ngage_appui.cpp  ngage_appui.h  ngage_appview.cpp  ngage_appview.h  ngage_document.cpp  ngage_document.h
src/z8lua/: .gitignore  CMakeLists.txt  CMakeSettings.json  fix32.h  lapi.c  linit.c  llex.c  llimits.h  lmathlib.c  lobject.c  loslib.c  lparser.c  lpico8lib.c  lstate.c  ltable.c  lua.c  lua.h  luaconf.h  lvm.c  trigtables.h
tests/: .gitignore  CMakeLists.txt  CMakeSettings.json  graphics.c  graphics.p8  test_invariant_p8_compress.c  tests.c  tests.lua  tests.p8  unit_tests.p8
